--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/react": "^14.0.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
