--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.11",
     "@mui/material": "^5.14.11",
     "@redux-devtools/extension": "^3.2.5",
+    "@supabase/supabase-js": "^2.38.0",
     "@testing-library/react": "^14.0.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
